modified pom: added scala compiler plugin, created class that counts rows in table